--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/main.js h",
-    "dev": "nodemon --ext '*' -w dist --exec 'npm start h'",
+    "start": "node ./dist/main.js",
+    "dev": "nodemon --ext '*' -w dist --exec 'npm start'",
     "build": "tsc",
     "test": "vitest",
     "coverage": "vitest run --coverage"
@@ -14,8 +14,6 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/koa": "^2.15.0",
-    "@types/koa__router": "^12.0.4",
     "@types/node": "^22.7.4",
     "@types/source-map-support": "^0.5.10",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
@@ -25,11 +23,8 @@
     "vitest": "^2.1.1"
   },
   "dependencies": {
-    "@hono/node-server": "^1.13.1",
-    "@koa/router": "^13.1.0",
     "dotenv": "^16.4.5",
-    "hono": "^4.6.3",
-    "koa": "^2.15.3",
+    "fastify": "^5.0.0",
     "pino": "^9.4.0"
   }
 }
