--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.7.4",
+    "@types/pg": "^8.11.10",
     "@types/source-map-support": "^0.5.10",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "eslint": "^8.57.1",
@@ -23,8 +24,10 @@
     "vitest": "^2.1.1"
   },
   "dependencies": {
+    "@sinclair/typebox": "^0.33.17",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
+    "pg": "^8.13.1",
     "pino": "^9.4.0"
   }
 }
