--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vitest": "^2.1.1"
   },
   "dependencies": {
+    "@fastify/cors": "^10.0.1",
     "@sinclair/typebox": "^0.33.17",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
