--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./dist/main.js",
-    "dev": "nodemon --ext '*' -w dist --exec 'npm start'",
+    "dev": "node --watch ./dist/**/*.js",
     "build": "tsc",
     "test": "vitest",
     "coverage": "vitest run --coverage"
