--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ezd-api",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">= 22.11.0"
+  },
   "scripts": {
     "start": "node ./dist/main.js",
     "dev": "node --watch-path ./dist/ dist/main.js",
@@ -14,21 +17,23 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@smithy/types": "^3.7.1",
     "@types/node": "^22.7.4",
     "@types/pg": "^8.11.10",
     "@types/source-map-support": "^0.5.10",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "eslint": "^8.57.1",
-    "nodemon": "^3.1.7",
-    "source-map-support": "^0.5.21",
     "vitest": "^2.1.1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.692.0",
+    "@aws-sdk/client-ssm": "^3.693.0",
     "@fastify/cors": "^10.0.1",
     "@sinclair/typebox": "^0.33.17",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
     "pg": "^8.13.1",
-    "pino": "^9.4.0"
+    "pino": "^9.4.0",
+    "source-map-support": "^0.5.21"
   }
 }
