--- a/package.json
+++ b/package.json
@@ -18,20 +18,24 @@
   "description": "",
   "devDependencies": {
     "@smithy/types": "^3.7.1",
+    "@stylistic/eslint-plugin": "^5.2.3",
     "@types/node": "^22.7.4",
     "@types/pg": "^8.11.10",
     "@types/source-map-support": "^0.5.10",
-    "@typescript-eslint/eslint-plugin": "^8.7.0",
-    "eslint": "^8.57.1",
-    "vitest": "^2.1.1"
+    "eslint": "^9.33.0",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.39.1",
+    "vite": "^6.3.5",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.692.0",
     "@aws-sdk/client-ssm": "^3.693.0",
     "@fastify/cors": "^10.0.1",
+    "@fastify/static": "^8.0.3",
     "@sinclair/typebox": "^0.33.17",
     "dotenv": "^16.4.5",
-    "fastify": "^5.0.0",
+    "fastify": "^5.1.0",
     "pg": "^8.13.1",
     "pino": "^9.4.0",
     "source-map-support": "^0.5.21"
